--- a/src/index.css
+++ b/src/index.css
@@ -19,20 +19,8 @@
   display: block;
 }
 
-.social-icons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.social-icons img {
-  width: 50px;
-  height: 50px;
-  margin-left: 10px;
-  border-radius: 50px;
-}
-.social-icons img:hover {
-  cursor: pointer;
+.social-icon:hover{
+  transform: scale(1.5);
 }
 
 .vertical-timeline::before {
